Implement search packages feature
